Assets/Dojo/Runtime/Bindings/dojo.gen.cs


            [FieldOffset(16)] // size = 4
            public PatternMatching pattern_matching;

            [FieldOffset(24)] // size = 16
            public CArrayc_char _models;

            public Span<string> models
            {
                get
                {
                    fixed (KeysClause* @this = &this)
                    {
                        var span = new Span<CString>(@this->_models.data, (int)@this->_models.data_len);
                        return span.ToArray().Select(str => CString.ToString(str)).ToArray();
                    }
                }

                set
                {
                    var strings = value.ToArray().Select(str => CString.FromString(str)).ToArray();
                    _models = new CArrayc_char();
                    _models.data_len = (UIntPtr)value.Length;
                    fixed (CString* ptr = strings)
                    {
                        _models.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct Member
        {
            [FieldOffset(0)] // size = 8
            public CString name_;

            public string name
            {
                get
                {
                    return CString.ToString(name_);
                }
                set
                {
                    name_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public Ty* _ty;

            public Ty ty
            {
                get
                {
                    return *_ty;
                }
            }

            [FieldOffset(16)] // size = 1
            public CBool key;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 72, Pack = 8)]
        public struct MemberClause
        {
            [FieldOffset(0)] // size = 8
            public CString model_;

            public string model
            {
                get
                {
                    return CString.ToString(model_);
                }
                set
                {
                    model_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public CString member_;

            public string member
            {
                get
                {
                    return CString.ToString(member_);
                }
                set
                {
                    member_ = CString.FromString(value);
                }
            }

            [FieldOffset(16)] // size = 4
            public ComparisonOperator operator_;

            [FieldOffset(24)] // size = 48
            public MemberValue value;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 48, Pack = 8)]
        public struct MemberValue
        {
            [FieldOffset(0)] // size = 4
            public MemberValue_Tag tag;

            [FieldOffset(8)] // size = 40
            public Primitive primitive_value;

            [FieldOffset(8)] // size = 8
            public CString @string_;

            public string @string
            {
                get
                {
                    return CString.ToString(@string_);
                }
                set
                {
                    @string_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 16
            public CArrayMemberValue _list;

            public Span<MemberValue> list
            {
                get
                {
                    fixed (MemberValue* @this = &this)
                    {
                        var span = new Span<MemberValue>(@this->_list.data, (int)@this->_list.data_len);
                        return span;
                    }
                }

                set
                {

                    _list = new CArrayMemberValue();
                    _list.data_len = (UIntPtr)value.Length;
                    fixed (MemberValue* ptr = value)
                    {
                        _list.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct MemberValue_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 40
            public Primitive primitive_value;

            [FieldOffset(0)] // size = 8
            public CString @string_;

            public string @string
            {
                get
                {
                    return CString.ToString(@string_);
                }
                set
                {
                    @string_ = CString.FromString(value);
                }
            }

            [FieldOffset(0)] // size = 16
            public CArrayMemberValue _list;

            public Span<MemberValue> list
            {
                get
                {
                    fixed (MemberValue_ANONYMOUS_FIELD1* @this = &this)
                    {
                        var span = new Span<MemberValue>(@this->_list.data, (int)@this->_list.data_len);
                        return span;
                    }
                }

                set
                {

                    _list = new CArrayMemberValue();
                    _list.data_len = (UIntPtr)value.Length;
                    fixed (MemberValue* ptr = value)
                    {
                        _list.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct MemberValue_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 40
            public Primitive primitive_value;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct MemberValue_ANONYMOUS_FIELD1_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 8
            public CString @string_;

            public string @string
            {
                get
                {
                    return CString.ToString(@string_);
                }
                set
                {
                    @string_ = CString.FromString(value);
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct MemberValue_ANONYMOUS_FIELD1_ANONYMOUS_FIELD2
        {
            [FieldOffset(0)] // size = 16
            public CArrayMemberValue _list;

            public Span<MemberValue> list
            {
                get
                {
                    fixed (MemberValue_ANONYMOUS_FIELD1_ANONYMOUS_FIELD2* @this = &this)
                    {
                        var span = new Span<MemberValue>(@this->_list.data, (int)@this->_list.data_len);
                        return span;
                    }
                }

                set
                {

                    _list = new CArrayMemberValue();
                    _list.data_len = (UIntPtr)value.Length;
                    fixed (MemberValue* ptr = value)
                    {
                        _list.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct Message
        {
            [FieldOffset(0)] // size = 8
            public CString message_;

            public string message
            {
                get
                {
                    return CString.ToString(message_);
                }
                set
                {
                    message_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 16
            public CArrayFieldElement _signature;

            public Span<FieldElement> signature
            {
                get
                {
                    fixed (Message* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_signature.data, (int)@this->_signature.data_len);
                        return span;
                    }
                }

                set
                {

                    _signature = new CArrayFieldElement();
                    _signature.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _signature.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 184, Pack = 8)]
        public struct Model
        {
            [FieldOffset(0)] // size = 48
            public Ty schema;

            [FieldOffset(48)] // size = 8
            public CString namespace__;

            public string namespace_
            {
                get
                {
                    return CString.ToString(namespace__);
                }
                set
                {
                    namespace__ = CString.FromString(value);
                }
            }

            [FieldOffset(56)] // size = 8
            public CString name_;

            public string name
            {
                get
                {
                    return CString.ToString(name_);
                }
                set
                {
                    name_ = CString.FromString(value);
                }
            }

            [FieldOffset(64)] // size = 32
            public FieldElement selector;

            [FieldOffset(96)] // size = 4
            public uint packed_size;

            [FieldOffset(100)] // size = 4
            public uint unpacked_size;

            [FieldOffset(104)] // size = 32
            public FieldElement class_hash;

            [FieldOffset(136)] // size = 32
            public FieldElement contract_address;

            [FieldOffset(168)] // size = 8
            public CString layout_;

            public string layout
            {
                get
                {
                    return CString.ToString(layout_);
                }
                set
                {
                    layout_ = CString.FromString(value);
                }
            }

            [FieldOffset(176)] // size = 1
            public CBool use_legacy_store;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct OrderBy
        {
            [FieldOffset(0)] // size = 8
            public CString field_;

            public string field
            {
                get
                {
                    return CString.ToString(field_);
                }
                set
                {
                    field_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 4
            public OrderDirection direction;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageController
        {
            [FieldOffset(0)] // size = 16
            public CArrayController _items;

            public Span<Controller> items
            {
                get
                {
                    fixed (PageController* @this = &this)
                    {
                        var span = new Span<Controller>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {
